@@ -89,6 +89,8 @@ See also xref:channel-adapter.adoc#channel-adapter-expressions-and-scripts[Chann
 NOTE: If no poller is provided, then a single default poller must be registered within the context.
 See xref:endpoint.adoc#endpoint-namespace[Endpoint Namespace Support] for more detail.
 
+NOTE: The default trigger for polling endpoint is a `PeriodicTrigger` instance of 1-second fixed delay period.
+
 [IMPORTANT]
 .Important: Poller Configuration
 =====
